--- a/Torture/torture.cfg
+++ b/Torture/torture.cfg
@@ -8,6 +8,7 @@
 
 ##  These are here to help you find the limits. (USE AT YOUR OWN RISK!) credits to Icesythe7 for simplifying these
 ##  Please note that this is configured for a Rook, you can change the X/Y coordinates to your linking.
+##  To change the speeds and acceleration, change them in yor machine window in Mainsail/Fluidd
 
 [gcode_macro TORTURE]
 description: Test all axis movements at max speeds set in mainsail
