--- a/Ease of use/Ease-of-use.cfg
+++ b/Ease of use/Ease-of-use.cfg
@@ -7,6 +7,7 @@ gcode:
     SAVE_GCODE_STATE NAME=loading_filament
     M117 Loading Filament
     M83
+    LOW_TEMP_CHECK
     G91
     #
     G1 E70 F1500 ## Adjust to the point that the filament just hits the hotend #!#
@@ -23,12 +24,29 @@ gcode:
 gcode:
     SAVE_GCODE_STATE NAME=unloading_filament
     M117 Unloading Filament 
-    #LOW_TEMP_CHECK
+    LOW_TEMP_CHECK
     G91 
     G1 E10 F600 ## Small extrude to make sure the filament is loose in the hotend
     G1 E-120 F1500 ## length to retract filament out
     G90
     RESTORE_GCODE_STATE NAME=unloading_filament
+
+
+[gcode_macro LOW_TEMP_CHECK]
+gcode:
+    {% set T_EXTRUDER = params.T_EXTRUDER|default(205) %}
+    {% if printer.extruder.target != 0 %} 
+        {% if printer.extruder.temperature < printer.extruder.target %} 
+            M118 Heating from {printer.extruder.temperature} to {printer.extruder.target}.
+            M109 S{printer.extruder.target|float} 
+        {% endif %}
+    {% else %}
+        {% if printer.extruder.target < T_EXTRUDER %} 
+            M118 No setpoint, heating to {T_EXTRUDER}.
+            M109 S{T_EXTRUDER}
+        {% endif %}
+    {% endif %}
+
 
 #======================================================
 # Heat Chamber
