--- a/Ease of use/Ease-of-use.cfg
+++ b/Ease of use/Ease-of-use.cfg
@@ -81,3 +81,36 @@ gcode:
 
 # [idle_timeout]
 # timeout: 1800 # timeout in seconds (1800 = 30 minutes)
+
+
+#=====================================================
+# PARK TOOLHEAD
+#=====================================================
+# Park top rear left
+[gcode_macro PARKREAR]
+gcode:
+    {% if "xyz" not in printer.toolhead.homed_axes %}
+        G28                           ; home if not already homed
+    {% endif %}
+    SAVE_GCODE_STATE NAME=PARKREAR
+    G90                              ; absolute positioning
+    G0 X{printer.toolhead.axis_minimum.x+10} Y{printer.toolhead.axis_maximum.y-10} Z{printer.toolhead.axis_maximum.z-5} F6000     
+    RESTORE_GCODE_STATE NAME=PARKREAR
+
+#=====================================================
+# SAVE CONFIG clean
+#=====================================================
+
+[gcode_macro SAVE_CONFIG]
+rename_existing: _SAVE_CONFIG
+description: SAVE_CONFIG macro
+gcode:
+    #PARK_TOOLHEAD
+    PARKREAR
+    #PARK_BED
+    _SAVE_CONFIG
+
+[gcode_macro SAVE_RESTART]
+description: cleaner SAVE_CONFIG macro
+gcode:
+    SAVE_CONFIG
